<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">left_poecket</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_agregar">Agregar</string>
    <string name="Comentarios">Comentarios</string>
    <string name="modo_selector">Selecciona modo de pago</string>
    <string name="v_detalles">Detalles del mes</string>
    <string name="v_detalles_subtitle">0 Pesos</string>
    <string name="agregar_titulo">Agregar</string>
	<string name="detalles_titulo">Detalles</string>
	<string name="list_back">Regresar</string>
    <string-array name="modo_pago">
        <item>Efectivo</item>
        <item>Tarjeta</item>
        <item>Cheque</item>
        <item>Vales</item>
    </string-array>
    <string name="tipo_selector">Selecciona tipo de pago</string>
    <string-array name="tipo_pago">
        <item>Ingreso</item>
        <item>Egreso</item>
    </string-array>
    <string name="Movimiento">Movimiento</string>
    <string name="Fecha">Fecha</string>
    <string name="Cantidad">Cantidad</string>

</resources>
